<resources>
    <string name="app_name">Petters.</string>
    <string name="signup_fullname">Full name</string>
    <string name="signup_fullname_placeholder">Jean Hello</string>
    <string name="signup_email_adress">Email address</string>
    <string name="signup_email_adress_placeholder">jean.hello@gmail.com</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirmation">Confirm password</string>
    <string name="signup_create_account_button">Create account</string>
    <string name="signup_already_have_account">You already have an account?</string>
    <string name="signup_already_have_account_login">Login</string>
    <string name="signup_no_name">Name Empty</string>
    <string name="signup_no_password">Password Empty</string>
    <string name="signup_no_email">Email Empty</string>
    <string name="login_email_adress">Email address</string>
    <string name="login_email_adress_placeholder">jean.hello@gmail.com</string>
    <string name="login_password">Password</string>
    <string name="login_password_placeholder">azeuzarizarizr</string>
    <string name="login_create_account_button">Login</string>
    <string name="login_create_account_text">New to Petters?</string>
    <string name="login_create_account_click">Create an account</string>
    <string name="login_no_email">Email Empty</string>
    <string name="login_no_password">Password Empty</string>
    <string name="alert_dialog_validation_fun">Woops, got it!</string>
    <string name="create_profile_name">Name</string>
    <string name="create_profile_name_placeholder">Toutou</string>
    <string name="create_profile_description">Description</string>
    <string name="create_profile_description_placeholder">My pet is sooooo cute</string>
    <string name="create_profile_birth_date">Date of birth</string>
    <string name="create_profile_birth_date_placeholder">03/03/18</string>
    <string name="create_profile_type">Type</string>
    <string name="create_profile_type_placeholder">Doggo</string>
    <string name="create_profile_gender">Gender</string>
    <string name="create_profile_genre_placeholder">Male</string>
    <string name="create_profile_validate">Add my pet</string>
    <string name="create_profile_no_name">Name Empty</string>
    <string name="create_profile_no_description">Description Empty</string>
    <string name="create_profile_no_birth_date">Birth Date Empty</string>
    <string name="create_profile_no_type">Type Empty</string>
    <string name="create_profile_no_gender">Gender Empty</string>
    <string name="create_profile_no_pic">No picture</string>
    <string name="edit_profile_save_modifications">Save</string>
    <string name="edit_profile_logout">Logout</string>
    <string name="edit_profile_delete_account">Delete my account</string>
    <string name="edit_profile_name">Toutou</string>
    <string-array name="type_array">
        <item>Doggo</item>
        <item>Kitty Cat</item>
        <item>Bunny</item>
        <item>Fish</item>
        <item>Mouse</item>
        <item>Guinea Pig</item>
        <item>Rat</item>
        <item>Hamster</item>
        <item>Chinchilla</item>
        <item>Octodon</item>
        <item>Korean Squirrel</item>
        <item>Gerbil</item>
        <item>Ferret</item>
        <item>Snake</item>
        <item>Spider</item>
        <item>Turtle</item>
        <item>Horse</item>
        <item>Axolotl</item>
        <item>Parrot</item>
        <item>Lizard</item>
        <item>Chameleon</item>
        <item>Sugar Glider</item>
        <item>Pig</item>
        <item>Flying Squirrel</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
        <item>Other</item>
    </string-array>
</resources>
