<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
>

    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:textAlignment="center"
            android:textColor="@color/colorPrimary" android:fontFamily="sans-serif" android:textStyle="bold"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2" android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="426dp"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/signup_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_fullname"
                    android:textAppearance="@style/form_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signup_fullname_field" android:layout_marginStart="3dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/signup_fullname_field"
                    android:hint="@string/signup_fullname_placeholder"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="426dp"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/signup_email_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_email_adress"
                    android:textAppearance="@style/form_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signup_email_adress_field"
                    android:layout_marginStart="3dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/signup_email_adress_field"
                    android:hint="@string/signup_email_adress_placeholder"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="426dp"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/signup_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_password"
                    android:textAppearance="@style/form_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signup_password_field" android:layout_marginStart="3dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/signup_password_field"
                    android:hint="@string/signup_password_placeholder"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:inputType="textPassword"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="426dp"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/signup_password_confirmation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_password_confirmation"
                    android:textAppearance="@style/form_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/signup_password_confirmation_field"
                    android:layout_marginStart="3dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/signup_password_confirmation_field"
                    android:hint="@string/signup_password_confirmation_placeholder"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:inputType="textPassword"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/constraintLayout2" android:layout_marginBottom="40dp">
        <TextView
                android:text="@string/signup_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/signup_already_have_account"
                android:textAppearance="@style/littleGreyText"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/signup_already_have_account_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/signup_already_have_account_login"
                android:textAppearance="@style/littleOrangeText"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_already_have_account"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:text="@string/signup_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:background="@drawable/button" android:textAppearance="@style/validate_button"
            tools:layout_editor_absoluteX="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"/>
</androidx.constraintlayout.widget.ConstraintLayout>
