<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:srcCompat="@drawable/landing_background"
            android:id="@+id/imageView" android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:textAlignment="center"
            android:textColor="@color/colorPrimary" android:fontFamily="sans-serif" android:textStyle="bold"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/login_create_account_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/landing_create_account"
                android:background="@drawable/button" android:textAppearance="@style/landing_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/landing_login"/>
        <Button
                android:text="@string/signup_already_have_account_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/landing_login"
                android:background="@drawable/button_reversed" android:textAppearance="@style/landing_button"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>